tests/core/snapshots/test-grpc-nested-optional.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "expected String, got Opt(Str)",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "body"
    ],
    "description": null
  },
  {
    "message": "expected Number, got Opt(Num)",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "id"
    ],
    "description": null
  },
  {
    "message": "expected String, got Opt(Str)",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "postImage"
    ],
    "description": null
  },
  {
    "message": "expected String, got Opt(Str)",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "title"
    ],
    "description": null
  }
]
