tests/core/snapshots/test-grpc-optional.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Type 'Option<String>' is not assignable to type 'String'",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "body"
    ],
    "description": null
  },
  {
    "message": "Type 'Option<Number>' is not assignable to type 'Number'",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "id"
    ],
    "description": null
  },
  {
    "message": "Type 'Option<String>' is not assignable to type 'String'",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "postImage"
    ],
    "description": null
  },
  {
    "message": "Type 'Option<String>' is not assignable to type 'String'",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news",
      "title"
    ],
    "description": null
  }
]
