tests/core/snapshots/test-grpc-proto-path.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "File Error",
    "trace": [],
    "description": null
  }
]
