tests/core/snapshots/test-grpc-service-method.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Couldn't find method X",
    "trace": [
      "tests/execution/test-grpc-service-method.md 6#18"
    ],
    "description": null
  }
]
