tests/core/snapshots/test-grpc-service.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Service not found : news.YourServiceName",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
