tests/core/snapshots/test-grpc.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://localhost:50051")
  @link(id: "news", src: "news.proto", type: Protobuf) {
  query: Query
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData! @grpc(method: "news.NewsService.GetAllNews")
  newsById(news: NewsInput!): News! @grpc(body: "{{.args.news}}", method: "news.NewsService.GetNews")
  newsByIdBatch(news: NewsInput!): News!
    @grpc(body: "{{.args.news}}", batchKey: ["news", "id"], method: "news.NewsService.GetMultipleNews")
}
