tests/core/snapshots/test-hostname-faliure.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of unknown field `path`, expected one of `onRequest`, `url`, `body`, `encoding`, `batchKey`, `headers`, `input`, `method`, `output`, `query`, `dedupe`, `select`",
    "trace": [
      "Query",
      "user",
      "@http",
      "path"
    ],
    "description": null
  }
]
