tests/core/snapshots/test-http-baseurl.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  bar: String @http(url: "http://abc.com/bar")
  foo: String @http(url: "http://foo.com/foo")
}
